Responses to code review from @dsaff.